--- a/css/style.css
+++ b/css/style.css
@@ -1067,9 +1067,9 @@ img {
     justify-content: center;
     align-items: center;
     letter-spacing: 0.06em;   
-
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border: 0;
 }
 
 .modal-label {    
@@ -1097,7 +1097,18 @@ display: block;
     resize: none;
 }
 
-
+.checkbox {
+    /* width: 400.62px;
+        height: 24px;
+        left: 612.38px;
+        top: 658px; */
+        
+        color: #757575;
+        font-size: 14px;
+        line-height: 24px;
+        /* identical to box height, or 171% */
+        letter-spacing: 0.03em;
+}
 
 /* modal-comment */
 
