--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ img {
 .link {    
     display: flex;
     text-decoration: none;
-    transition-duration: 250ms;
+    transition-duration: 1250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Добавляє ховер i фокус в хедерi */
@@ -948,7 +948,7 @@ img {
     background: var(--background-very-gray);  
 }
 
-/* Модальне вiкно */
+/*---------------- Модальне вiкно -----------------*/
 .backdrop {
     position: absolute;
     top: 0;
@@ -1014,7 +1014,7 @@ img {
 }
 
 /*---- Форма ----*/
-.modale-title {
+.modal-title {
     margin-bottom: 12px;
 
     color: #212121;
@@ -1028,17 +1028,20 @@ img {
     letter-spacing: 0.03em;   
 }
 
-.modale-input {
+.modal-input {
     /* display: flex; */
     width: 100%;
     height: 40px;
-    padding-left: 10px;
+    padding-left: 40px;
     margin-bottom: 10px;
     border: 1px solid rgba(33, 33, 33, 0.2);
-        border-radius: 4px;
+    border-radius: 4px;
+    outline: transparent;
+    
+    transition-property: border-color;
 }
 
-.modale-input::placeholder {
+.modal-input::placeholder {
     /* width: 57px;
     height: 14px;
     left: 576px;
@@ -1048,6 +1051,16 @@ img {
     font-size: 12px;
     line-height: 14px;
     letter-spacing: 0.01em;  
+}
+
+.modal-input:hover,
+.modal-input:focus {
+    border-color: var(--accent-hover-color);
+}
+
+.modal-input:hover + .input-icon,
+.modal-input:focus + .input-icon {
+    fill: var(--accent-hover-color)
 }
 
 .btn-input {
@@ -1073,7 +1086,7 @@ img {
 }
 
 .modal-label {    
-display: block;      
+    display: block;      
     margin-bottom: 4px;   
     font-size: 12px;
     line-height: 14px;
@@ -1081,7 +1094,7 @@ display: block;
     
     color: #757575;
 }
-.comment {
+.modal-comment {
     padding: 16px 12px;
     margin-bottom: 20px;
     width: 100%;
@@ -1097,19 +1110,83 @@ display: block;
     resize: none;
 }
 
-.checkbox {
-    /* width: 400.62px;
-        height: 24px;
-        left: 612.38px;
-        top: 658px; */
-        
-        color: #757575;
-        font-size: 14px;
-        line-height: 24px;
-        /* identical to box height, or 171% */
-        letter-spacing: 0.03em;
+.modal-comment:hover,
+.modal-comment:focus {
+    border-color: var(--accent-hover-color);
 }
 
+/* ---за Репетою--- */
+.modal-checkbox {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.modal-checkbox span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 15px;
+    margin-right: 7px;
+    color: #757575;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    border: 2px solid #212121;
+}
+
+.check-icon {
+    /* fill: transparent; */
+    opacity: 0;
+}
+
+.checkbox-text:checked + .modal-checkbox span {
+    background-color: var(--accent-hover-color);
+        border: none;       
+}
+
+.check-icon {
+    fill: var(--primary-white-color);
+    opacity: 1;
+}
+
+/* ----за Данилком----- */
+/* .modal-checkbox {
+    display: flex;
+    align-items: center;
+}
+
+.modal-checkbox::before {
+    content: "";
+    width: 16px;
+    height: 15px;
+    margin-right: 7px;
+    color: #757575;    
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    border: 2px solid #212121;
+}
+
+.checkbox-text:checked + .modal-checkbox::before {
+    background-color: var(--accent-hover-color);
+    border: none;
+    background-image: url(../images/check.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+} */
+
+.modal-wrap {
+    position: relative;
+}
+
+.input-icon {
+    position: absolute;
+    left: 12px;
+    top: 40%;
+    transform: translateY(-40%);
+    transition-property: fill;
+}
 /* modal-comment */
 
-/* .modal-field {} */
