--- a/css/style.css
+++ b/css/style.css
@@ -1113,6 +1113,7 @@ img {
     left: 576px;
     top: 500px; */
     color: #757575;
+    color: rgba(117, 117, 117, 0.5);
         
     font-size: 12px;
     line-height: 14px;
@@ -1176,7 +1177,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     width: 100%;
     height: 120px;
 
-    color: rgba(117, 117, 117, 0.5);
+    color: #757575;
 
     font-size: 12px;
     line-height: 14px;
@@ -1187,6 +1188,11 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     outline: transparent;
 
     transition-property: border-color;
+}
+
+.modal-comment::placeholder {   
+    color: #757575;
+    color: rgba(117, 117, 117, 0.5);
 }
 
 .modal-comment:hover,
