--- a/css/style.css
+++ b/css/style.css
@@ -1091,6 +1091,10 @@ img {
 }
 
 /*---- Форма ----*/
+.modal-field {
+    margin-bottom: 10px;
+}
+
 .modal-title {
     margin-bottom: 12px;
 
@@ -1108,9 +1112,8 @@ img {
 .modal-input {
     /* display: flex; */
     width: 100%;
-    height: 40px;
-    padding-left: 40px;
-    margin-bottom: 10px;
+    height: 50px;
+    padding-left: 50px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     outline: transparent;
@@ -1255,15 +1258,35 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-color: var(--accent-hover-color);
 }
 
-.check-text {    
-    color: #757575;
-            
-    font-size: 14px;
-    line-height: 24px;    
-    letter-spacing: 0.03em;  
+.checkbox-text:hover + .modal-checkbox span,
+.checkbox-text:focus + .modal-checkbox span{
+    transition-property: border-color;
 }
 
+.check-text {
+    display: flex;
+    gap: 3px;
 
+    color: #757575;
+
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+}
+
+.check-link {
+    font-size: 14px;
+        line-height: 0.89px;
+        letter-spacing: 0.03em;
+        border-bottom: 1px solid var(--accent-color);
+    color: var(--accent-color);
+    text-decoration: underline;
+}
+
+/* .check-link:hover,
+.check-link:focus {
+    color: var(--accent-hover-color);
+} */
 
 
 /* ----за Данилком----- */
