--- a/css/style.css
+++ b/css/style.css
@@ -693,7 +693,7 @@ img {
 .footer-flex {
     justify-content: center;
     align-items: baseline;
-    margin-right: 70px;
+    margin-right: auto;
 }
 
 .footer-flex:last-child {
@@ -758,29 +758,28 @@ img {
 /*----- Футер Розсилка -----*/
 .online-form {
     display: flex;
-    /* justify-content: baseline; */
+    justify-content: center;
     /* align-items: baseline; */
 }
 
 .online-input {
     width: 358px;
-        height: 50px;
-        left: 815px;
-        top: 2784px;
+    height: 50px;
+    left: 815px;
+    top: 2784px;
     padding-left: 16px;
     margin-right: 12px;
-        margin-bottom: 10px;
-        letter-spacing: 0.03em;
+    letter-spacing: 0.03em;
 
-        color: rgba(255, 255, 255, 0.6);
-        background: #2F303A;
+    color: rgba(255, 255, 255, 0.6);
+    background: #2F303A;
 
-        border: 1px solid rgba(255, 255, 255, 0.3);
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-        border-radius: 4px;
-        outline: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    outline: transparent;
 
-        transition-property: border-color;
+    transition-property: border-color;
 }
 
 .online-input:hover,
@@ -818,6 +817,15 @@ img {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+.btn-input-online::after {
+    content: "";
+    width: 24px;
+    height: 24px;
+    margin-left: 10px;
+
+    color: var(--primary-white-color);
+    background-image: url(../images/icon-plane.svg);
+}
 
 /* Портфоліо */
      /* Секція 1 */
@@ -1045,7 +1053,7 @@ img {
     padding: 40px;
     position: absolute;
     width: 528px;
-    min-height: 581px;
+    height: 581px;
     /* left: 536px;
     top: 221px; */
     top: 50%;
@@ -1198,6 +1206,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     color: #757575;
 }
 .modal-comment {
+    display: block;
     padding: 16px 12px;
     margin-bottom: 20px;
     width: 100%;
@@ -1229,6 +1238,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 /* ---за Репетою--- */
 .modal-checkbox {
     display: flex;
+    justify-content: center;
     align-items: center;
     margin-bottom: 30px;
 }
